examples/errors/function_function_collision.aaa
fn foo begin
    nop
end

fn foo begin
    nop
end
